@@ -1,3 +1,8 @@
+2006-09-15  Bernd Schmidt  <bernd.schmidt@analog.com>
+
+	* config/bfin-parse.y (binary): Do some more constant folding for
+	additions.
+
 2006-09-13  Jan Beulich  <jbeulich@novell.com>
 
 	* input-file.c (input_file_give_next_buffer): Demote as_bad to
